--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,68 @@
+/******************** Imported Fonts ************************/
+
+@font-face {
+  font-family: 'Avenir Next';
+  src:  url('../fonts/Avenir Next.ttc') format('ttc');
+  src:  url('../fonts/Avenir.ttc') format('ttc'),
+}
+
+
 /************************ Universal ************************/
 
 * {
-	box-sizing:border-box;
+	box-sizing: border-box;
 }
 
 body {
-	font-family: 'Open Sans';
+	font-family: 'Avenir', Arial, sans-serif;
 }
 
-/************************ Dropdown arrow ************************/
 
-.arrow {
-	color: #fff;
-	font-size: 10px;
+
+/************************ Homepage Header ************************/
+
+header {
+	padding-top: 10px;
 }
 
-/************************ Home and hero nav Styles ************************/
-
-.desktop-nav {
-	padding-top: 5px;
+header.home-header {
+	position: absolute;
+	left: 0;
+	right: 0;
 }
 
+nav li {
+list-style-type: none;
+}
+
+nav ul {
+	padding-left: 0;
+}
 
 .desktop-nav ul {
 	float: right;
-		}
+}
 
-.desktop-nav ul li:not(.sub-list) {
+.navlinks li a {
+	color: white;
+	font-weight: 400;
+	font-size: 15px;
+	text-decoration: none;
+
+}
+
+#contact-btn {
+	border-radius: 6px;
+	border: 2px solid #fff;
+	padding: 10px 20px;
+}
+
+#contact-btn:hover {
+	background-color: #fff;
+}
+
+
+.desktop-nav > ul > li {
 	float: left;
 	display: inline-block;
 	position: relative;
@@ -34,14 +70,22 @@ body {
 	
 }
 
-.desktop-nav ul li:nth-of-type(2):hover {
+.menu-item-has-children:hover {
 	color: #61C0C7;
 	background-color: white;
 
 }
 
-.desktop-nav ul li:nth-of-type(2):hover #sub-menu, .desktop-nav ul li:nth-of-type(2):hover .arrow {
+.desktop-nav a, .desktop-nav .menu-item-has-children:hover > a {
 	color: #61C0C7;
+}
+
+.desktop-nav .menu-item-has-children:hover > a:after { 
+	content: url(''); /* regular state */
+}
+
+.desktop-nav .menu-item-has-children:hover > a:after {
+	content: url(''); /* hover state arrow */
 }
 
 .desktop-nav ul li a:hover {
@@ -49,32 +93,16 @@ body {
 	
 }
 
-header a img {
-	display: inline-block;
-	float: left;
-	margin: 0px 0px 5px 78px;
+/*Fix*/
+.arrow {
+	color: #fff;
+	font-size: 10px;
 }
 
-.navlinks li a {
-	text-decoration: none;
-	color: white;
-	font-weight: 400;
-	font-size: 15px;
 
-}
 
-#lastbutton {
-	border-radius: 5px;
-	border: 2px solid #fff;
-	padding: 8px 15px;
-	margin-right: 50px;
-}
 
-#lastbutton:hover {
-	background-color: #fff;
-}
-
-/************************ Purple Navigation Styles ********************/
+/************************ Inner Pages Header ********************/
 
 .main-header {
 	background-color: #615E79;
@@ -85,9 +113,38 @@ header a img {
 	
 }
 
-dl, ol, ul {
+/*dl, ol, ul {
 	margin-bottom: 0rem;
 }
+*/
+
+
+/************************ Dropdown Menu Styles ************************/
+
+.dropdown {
+	position:absolute;
+	background-color: white;
+	width: 235px;
+	padding: 0px;
+	margin: 49px 0 0 -112px;
+	display: none;
+}
+
+.dropdown li {
+	padding: 10px 0px 10px 20px;
+}
+
+
+.dropdown li a {
+	color: #4D6162;
+}
+
+
+.menu-item-has-children:hover > .dropdown {
+	display: initial;
+}
+
+
 
 /************************ Content Side Navigation Styles **************/
 
@@ -95,90 +152,57 @@ dl, ol, ul {
 	padding: 7px 0px;
 }
 
+.side-nav h5 {
+	font-size: 24px;
+	font-family: 'Avenir';
+	font-weight: 300;
+	
+}
 
-.side-nav a {
-	font-size: 20px;
-	font-family: 'Open Sans';
-	font-weight: 400;
+.side-nav h5 a {
 	color: #4D6162;
 	text-decoration: none;
-	padding-left: 7px;
+	padding-left: 20px;
 }	
 
 .side-nav a:hover {
-	border-left: 4px solid #61C0C7;
+	border-left: 3px solid #61C0C7;
 	
 }
 
 
 
-/************************ sub-menu Styles ************************/
-
-.sub-menu {
-	position:absolute;
-	background-color: white;
-	width: 235px;
-	padding: 0px;
-	margin: 49px 0 0 -116px;
-	list-style-type: none;
-	display: none;
-}
-
-.sub-list {
-	padding: 10px 0px 10px 20px;
-	
-}
-
-
-.sub-menu li a {
-	color: #4D6162;
-
-}
-
-#sub-menu:hover {
-	background: white;
-
-
-}
-
-.navlinks li:hover .sub-menu {
-	display: initial;
-
-}
-
-#last-dropdown-link {
-	/*padding-top: 55px;*/
-}
 
 /************************ Header Styles ************************/
 
-.heroarea {
-	height: 695px;
+.hero {
+	height: 100vh;
+	min-height: 500px;
 	background: #3967A2 url('../img/chicago.jpg') no-repeat center / cover;
 }
 
-/************************ Hero Text Styles ********************/
-.herocontent {
-	text-align: center;
-	
-}
 
-.herocontent h1 {
-	font-weight: 400;
-	font-size: 35px;
-	margin: 0px;
+/************************ Hero Text Styles ********************/
+
+.hero-content {
+	float: left;
+	text-align: center;
 	color: white;
 }
 
-.herocontent h2 {
+.hero-content h1 {
+	font-weight: 700;
+	font-size: 53px;
+	margin: 0px;
+}
+
+.hero-content h2 {
 	font-weight: 300;
 	font-size: 10px;
 	margin-top: 5px;
 }
 
-
-
-.herocontent h3 a {
+.hero-content h3 a {
 	padding: 8px 30px;
 	background-color: #67E2EB;
 	border-radius: 10px;
@@ -186,25 +210,25 @@ dl, ol, ul {
 	color: #fff;
 	font-weight: 600;
 	font-size: 25px;
-	box-shadow: 0px 2px 13px -2px rgba(0,0,0,0.75);
+	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.31);
 
 }
 
-.herocontent h3{
-	margin-top: 20px;
+.hero-content h3{
+	margin-top: 30px;
 }
+
 
 /************************ 3 col area styles ************************/
 
 .three-column-sec {
-	border: 1px solid #979797;
+	border: 1px solid #ccc;
 	margin:40px 20px;
-	height: 340px;
 }
 
 .three-column-sec h4 {
 	color: #615E79;
-	font-family: 'Bentham';
+	font-family: 'Bentham', Times, serif;
 	margin: 25px 0px 0px 0px;
 }
 
@@ -231,6 +255,7 @@ dl, ol, ul {
 	left: 5px;
 }
 
+
 /************************ Footer Styles ************************/
 
 footer {
@@ -238,7 +263,7 @@ footer {
 	margin-top: 70px;
 }
 
-footer p {
+footer p, address {
 	text-align: center;
 	color: #fff;
 	font-size: 13px;
@@ -258,21 +283,22 @@ footer p {
 /************************ Media Queries ************************/
 
 @media (min-width: 600px) {
-  .herocontent {
-	float: right;
-	text-align: right;
-	margin-right: 80px;
-	margin-top: 95px;
-	color: white;
+
+  .hero-content {
+		text-align: right;
+
+  	/* Vertically Alignment*/
+		position: relative;
+		top: 50%;
+		-webkit-transform: translateY(-80%);
+		-ms-transform: translateY(-80%);
+		transform: translateY(-80%);
 }
 
-.herocontent h1 {
-	font-weight: 700;
-	font-size: 53px;
-	margin: 0px;
+.hero-content h1 {
 }
 
-.herocontent h2 {
+.hero-content h2 {
 	font-weight: 400;
 	font-size: 25px;
 	margin-top: 5px;
@@ -287,19 +313,20 @@ footer p {
 	font-family: 'Bentham';
 	font-size: 48px;
 	color: #0C222C;
+	margin: 90px 0px 67px;
 }
 
 .page-content h4 {
 	font-family: 'Bentham';
 	font-size: 34px;
 	color: #615E79;
-	margin: 50px 0px 0px; 
+	margin: 100px 0px 0px; 
 }
 
 .page-content p {
 	color: #4A4A4A;
-	font-size: 15px;
-	font-family: 'Open Sans';
+	font-size: 18px;
+	font-family: 'Avenir';
 	font-weight: 300;
 }
 
@@ -309,7 +336,7 @@ footer p {
 
 
 .first-p {
-	margin-top: 30px;
+	margin-top: 40px;
 }
 
 
@@ -330,7 +357,7 @@ footer p {
 	margin-top: 50px;
 	padding-bottom: 7px;
 	font-size: 24px;
-	font-family: 'Open Sans';
+	font-family: 'Avenir';
 	color: #4D6162;
 	border-bottom: 3px solid #61C0C7;
 	display: inline-block;
@@ -355,6 +382,12 @@ footer p {
 	font-weight: 400;
 }
 
+.apply-btn h3 {
+	margin-top: 80px;
+	line-height: 24px;
+	height: 28px;
+}
+
 
 .apply-btn h3 a {
 	padding: 12px 70px;
@@ -364,6 +397,7 @@ footer p {
 	color: #fff;
 	font-weight: 600;
 	font-size: 25px;
+
 
 }
 
@@ -383,12 +417,46 @@ footer p {
 	margin-top: 10px;
 }
 
+/************************ Form Styles ************************/
 
+form {
+  max-width: 530px;
+  margin: auto;
+  height: 331px;
+  background: #F8F8F8;
+ 
+}
 
+form label,
+form input,
+form a,
+form button {
+	display: block; 
+}
 
+form label {
+	font-size: 18px;
+	pad
+}
 
+form input {
+	padding: 6px 200px 6px 13px;
+	border-radius: 6px;
+	color: #979797;
+}
+/*
+::-webkit-input-placeholder,
+:-moz-placeholder,
+::-moz-placeholder,
+:-ms-input-placeholder {
+   color: #9B9B9B;
+   
+}*/
 
-
+input:placeholder-shown {
+  color: #9B9B9B;
+}
+ 
 
 
 
