--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,22 @@
 
 @font-face {
   font-family: 'Avenir Next';
-  src:  url('../fonts/Avenir Next.ttc') format('ttc');
-  src:  url('../fonts/Avenir.ttc') format('ttc'),
+  src:  url('../fonts/Avenir Next Next.ttc') format('ttc');
+  font-weight: normal;
 }
+
+@font-face {
+  font-family: 'Avenir';
+  src:  url('../fonts/Avenir.ttc') format('ttc');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Sf Ns';
+  src:  url('../fonts/sfns.ttf') format('truetype');
+  font-weight: normal;
+}
+
 
 
 /************************ Universal ************************/
@@ -14,59 +27,68 @@
 }
 
 body {
-	font-family: 'Avenir', Arial, sans-serif;
+	font-family: 'Avenir Next', Helvetica, Arial, sans-serif;
+	overflow-x: hidden;
+}
+
+.container,
+.container-fluid {
+	max-width: 1440px;
+	margin: auto;
 }
 
 
 
 /************************ Homepage Header ************************/
 
-header {
-	padding-top: 10px;
-}
 
 header.home-header {
 	position: absolute;
 	left: 0;
 	right: 0;
+	z-index: 5;
+}
+
+#logo {
+	margin-left: 60px;
+	padding-top: 3px;
+	padding-bottom: 8px;
+
 }
 
 nav li {
 list-style-type: none;
 }
 
-nav ul {
-	padding-left: 0;
-}
-
-.desktop-nav ul {
-	float: right;
-}
 
 .navlinks li a {
 	color: white;
-	font-weight: 400;
-	font-size: 15px;
+	font-size: 16px;
 	text-decoration: none;
+	
 
 }
 
 #contact-btn {
 	border-radius: 6px;
 	border: 2px solid #fff;
-	padding: 10px 20px;
+	padding: 8px 15px;
 }
 
 #contact-btn:hover {
-	background-color: #fff;
+	background-color: #61C0C7;
+	color: #fff;
 }
 
+.desktop-nav > ul {
+	margin-left: 80px;
+}
 
 .desktop-nav > ul > li {
 	float: left;
 	display: inline-block;
-	position: relative;
-	padding: 15px 20px 25px;
+	padding: 25px 15px 25px 10px;
+	margin: -15px 15px 0px 0px;
 	
 }
 
@@ -80,26 +102,22 @@ nav ul {
 	color: #61C0C7;
 }
 
-.desktop-nav .menu-item-has-children:hover > a:after { 
-	content: url(''); /* regular state */
+.desktop-nav .menu-item-has-children a:after { 
+	content: url('../img/Dropdown-triangle.png'); /* regular state */
+	position: relative;
+	left: 5px;
 }
 
 .desktop-nav .menu-item-has-children:hover > a:after {
-	content: url(''); /* hover state arrow */
+	content: url('../img/Dropdown-hover.png'); /* hover state arrow */
+	position: relative;
+	left: 5px;
 }
 
 .desktop-nav ul li a:hover {
 	color: #61C0C7;
 	
 }
-
-/*Fix*/
-.arrow {
-	color: #fff;
-	font-size: 10px;
-}
-
-
 
 
 /************************ Inner Pages Header ********************/
@@ -113,34 +131,36 @@ nav ul {
 	
 }
 
-/*dl, ol, ul {
-	margin-bottom: 0rem;
-}
-*/
 
 
 /************************ Dropdown Menu Styles ************************/
 
-.dropdown {
+.dropdown-content {
 	position:absolute;
 	background-color: white;
 	width: 235px;
 	padding: 0px;
-	margin: 49px 0 0 -112px;
+	margin: 25px 0 0 -10px;
 	display: none;
+	-webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.25);
+	-moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.25);
+	box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.25);
 }
 
-.dropdown li {
-	padding: 10px 0px 10px 20px;
+.dropdown-content li:nth-child(1) {
+	padding: 20px 0px 10px 20px;
 }
 
+.dropdown-content li:nth-child(2) {
+	padding: 10px 0px 20px 20px;
+}
 
-.dropdown li a {
+.dropdown-content li a {
 	color: #4D6162;
 }
 
 
-.menu-item-has-children:hover > .dropdown {
+.menu-item-has-children:hover > .dropdown-content {
 	display: initial;
 }
 
@@ -154,7 +174,7 @@ nav ul {
 
 .side-nav h5 {
 	font-size: 24px;
-	font-family: 'Avenir';
+	font-family: 'Avenir Next', Helvetica, Arial, sans-serif;
 	font-weight: 300;
 	
 }
@@ -162,14 +182,16 @@ nav ul {
 .side-nav h5 a {
 	color: #4D6162;
 	text-decoration: none;
-	padding-left: 20px;
 }	
 
-.side-nav a:hover {
+.nav ul li a:active {
 	border-left: 3px solid #61C0C7;
 	
 }
 
+.selected {
+	color: #67E2EB !important;
+}
 
 
 
@@ -184,10 +206,15 @@ nav ul {
 
 /************************ Hero Text Styles ********************/
 
-.hero-content {
-	float: left;
-	text-align: center;
-	color: white;
+  .hero-content {
+		color: white;
+		text-align: right;
+		padding: 30px;
+		position: relative;
+		top: 47%;
+		-webkit-transform: translateY(-80%);
+		-ms-transform: translateY(-80%);
+		transform: translateY(-80%);
 }
 
 .hero-content h1 {
@@ -197,55 +224,55 @@ nav ul {
 }
 
 .hero-content h2 {
-	font-weight: 300;
-	font-size: 10px;
-	margin-top: 5px;
+	font-weight: 400;
+	font-size: 25px;
+	margin: 15px 0px 27px;
 }
 
-.hero-content h3 a {
+.hero-content a {
 	padding: 8px 30px;
 	background-color: #67E2EB;
 	border-radius: 10px;
 	text-decoration: none;
 	color: #fff;
-	font-weight: 600;
+	font-weight: 400;
 	font-size: 25px;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.31);
 
 }
 
-.hero-content h3{
-	margin-top: 30px;
-}
+
+
+
+
 
 
 /************************ 3 col area styles ************************/
 
 .three-column-sec {
 	border: 1px solid #ccc;
-	margin:40px 20px;
+	margin:40px 9px 30px; 
 }
 
 .three-column-sec h4 {
 	color: #615E79;
-	font-family: 'Bentham', Times, serif;
-	margin: 25px 0px 0px 0px;
+	font-family: 'Sf Ns', Helvetica, Arial, sans-serif;
+	margin: 51px 0px 0px 0px;
 }
 
 .three-column-sec p {
-	padding: 30px;
-	margin-top: 0px;
+	margin: 28px 27px 42px 37px;
 }
 
 /************************ 3 col area button Styles ************************/
 
 .three-column-sec a {
-	margin: 0px 25px 35px 0px;
+	margin: 0px 30px 22px 0px;
 	font-size: 17px;
 	text-decoration:none;
 	color: #61C0C7;
-	font-family: 'Open Sans';
-	font-weight: 400;
+	font-family: 'Avenir Next', Helvetica, Arial, sans-serif;
+	font-weight: 500;
 }
 
 .three-column-sec a::after {
@@ -266,8 +293,8 @@ footer {
 footer p, address {
 	text-align: center;
 	color: #fff;
-	font-size: 13px;
-	font-weight: 300;
+	font-size: 12px;
+	font-weight: 100;
 	margin: 0px;
 }
 
@@ -280,75 +307,63 @@ footer p, address {
 
 }
 
-/************************ Media Queries ************************/
-
-@media (min-width: 600px) {
-
-  .hero-content {
-		text-align: right;
-
-  	/* Vertically Alignment*/
-		position: relative;
-		top: 50%;
-		-webkit-transform: translateY(-80%);
-		-ms-transform: translateY(-80%);
-		transform: translateY(-80%);
-}
-
-.hero-content h1 {
-}
-
-.hero-content h2 {
-	font-weight: 400;
-	font-size: 25px;
-	margin-top: 5px;
-}
-
-  
-}
 
 /************************ About page ************************/
 
 .content-heading {
-	font-family: 'Bentham';
+	font-family: 'Bentham', Helvetica, Arial, sans-serif;
 	font-size: 48px;
 	color: #0C222C;
-	margin: 90px 0px 67px;
+	margin: 90px 0px 60px;
 }
 
 .page-content h4 {
-	font-family: 'Bentham';
+	font-family: 'Bentham', Helvetica, Arial, sans-serif;
 	font-size: 34px;
 	color: #615E79;
-	margin: 100px 0px 0px; 
+	margin: 75px 0px 0px; 
 }
 
 .page-content p {
-	color: #4A4A4A;
-	font-size: 18px;
-	font-family: 'Avenir';
-	font-weight: 300;
+	color: #4D6162;
+	font-size: 16px;
+	font-family: 'Avenir', Helvetica, Arial, sans-serif;
+	font-weight: 100;
+	line-height: 28px;
 }
-
-/*.page-content img {
-	margin-bottom: 40px;
-}*/
-
 
 .first-p {
-	margin-top: 40px;
+	margin:30px 0px 0px;
+}
+
+.directors {
+	text-align: center;
+	width: 145%;
+}
+
+figcaption h6 {
+	font-size: 14px;
+}
+
+.figure-sec .offset-md-3 {
+	margin-left: 28%;
+}
+
+.figure-sec .col-md-3 {
+	width: 21%;
 }
 
 
-/*.figure-sec h6 {
-	width: 250px;
-	font-family: 'Open Sans';
-	font-size: 15px;
-	font-weight: 400;
-
-}*/
 
 /************************ Programs /BAR PROCESS MANAGEMENT page **********/
+
+.our-programs ul li p,
+.our-programs ol li p,
+.Illinois-bar-exam ul li p,
+.get-involved ul li p {
+	margin-bottom: 4px;
+}
+
 .page-content ul {
 	color:#4D6162;
 }
@@ -357,24 +372,31 @@ footer p, address {
 	margin-top: 50px;
 	padding-bottom: 7px;
 	font-size: 24px;
-	font-family: 'Avenir';
+	font-family: 'Avenir Next', Helvetica, Arial, sans-serif;
 	color: #4D6162;
 	border-bottom: 3px solid #61C0C7;
 	display: inline-block;
+	font-weight: 400;
 
 }
 
-.program-pricing p {
+.program-pricing p,
+.Illinois-bar-exam ul,
+.get-involved ul {
 	margin-bottom: 0px;
 }
 
 .program-pricing strong {
-	font-weight: 700;
+	font-weight: 600;
 	color: #4D6162;
 }
 
 .in-ptag-link {
 	text-decoration: underline;
+	color: #61C0C7;
+}
+
+.in-ptag-link:hover {
 	color: #61C0C7;
 }
 
@@ -405,72 +427,350 @@ footer p, address {
 	background-color: #67E2EB;
 }
 
+/************************ Illinois Bar Exam page ************************/
+
+.Illinois-bar-exam p:nth-child(1) {
+	margin-bottom: 0px;
+}
+
 .exam-day strong {
 	font-weight: 700;
 }
 
-.exam-schedule p {
-	margin-bottom: 5px;
+#the-exam,
+#Multistate-Bar-Exam {
+	margin-top: 25px;
 }
 
-.exam-schedule ul li:first-child {
+.exam-schedule ul li:first-child,
+.our-programs ul li:first-child,
+.our-programs ol li:first-child {
 	margin-top: 10px;
 }
 
+/************************ Stay Engaged page ************************/
+
+.event-time-p {
+	margin: 30px 0px 5px;
+}
+
+.rsvp-button > a {
+	padding: 10px 25px;
+	
+}
+
+.rsvp-button {
+	margin: 35px 0px 35px;
+}
+
+.get-involved p span {
+	text-decoration: underline;
+}
+
+/************************ Donate page ************************/
+
+#donate-irs-p {
+	margin-bottom: 65px;
+}
+
+
 /************************ Form Styles ************************/
 
-form {
-  max-width: 530px;
-  margin: auto;
-  height: 331px;
+.login-area {
   background: #F8F8F8;
+  max-width: 478px;
  
+}
+
+form {
+	max-width: 390px;
+	width: 90%;
+	margin: auto;
+
 }
 
 form label,
 form input,
-form a,
-form button {
+#forgot-password {
 	display: block; 
 }
 
-form label {
+form button {
+	display: inline-block;
+}
+
+form label:nth-child(1) {
 	font-size: 18px;
-	pad
+	margin: 0px 0px 3px;
+	padding: 44px 0px 0px;
+}
+
+form label:nth-child(3) {
+	font-size: 18px;
+	margin: 20px 0px 3px;
+}
+
+form a {
+	color: #61C0C7;
+	margin: 7px 0px;
+	float: right;
+}
+
+form a:hover {
+	text-decoration: none;
+	color: #61C0C7;
+
+}
+
+
+#submit-button {
+	padding: 55px 0px 30px;
+	text-align: center;
+
+
+}
+
+.login-button {
+	padding: 5px 111px;
+	color: #fff;
+	font-size: 28px;
+	font-weight: 500; 
+	background-color: #61C0C7;
+	border: none;
+	border-radius: 12px;
+
 }
 
 form input {
-	padding: 6px 200px 6px 13px;
+	padding: 6px 0px 6px 10px;
 	border-radius: 6px;
-	color: #979797;
+	border: 1px solid #979797;
+	color: #9B9B9B;
+
 }
-/*
-::-webkit-input-placeholder,
-:-moz-placeholder,
-::-moz-placeholder,
-:-ms-input-placeholder {
-   color: #9B9B9B;
-   
-}*/
 
-input:placeholder-shown {
-  color: #9B9B9B;
+form input,
+form label,
+#submit-button,
+#forgot-password {
+	width: 100%;
+	max-width: 388px;
 }
- 
+
+/************************ Sub Form Styles ************************/
+
+.login-recovery {
+	margin-left: 45px;
+}
+
+.login-recovery p {
+	margin-top: 30px;
+	font-size: 16px;
+	color: #4D6162;
+}
+
+.login-recovery h5 {
+	margin-top: 45px;
+	font-size: 24px;
+	color: #4D6162;
+	font-weight: 300;
+}
+
+.login-recovery h5:nth-child(3) {
+	margin-top: 35px;
+}
+
+.login-recovery a {
+	display: inline-block;
+	padding: 5px 15px;
+	text-align: center;
+	margin: 25px 0px 0px 45px;
+}
+
+.login-recovery a:hover {
+	text-decoration: none;
+	color: white;
+}
+
+/************************ Slider Styles ************************/
+
+.carousel-control {
+    position: absolute;
+    top: 85%; /* pushes the icon in the middle of the height */
+     z-index: 5;
+    display: inline-block;
+    width: 0%;
+}
+
+.carousel-inner {
+	overflow: initial;
+}
+
+.carousel-control.left, .carousel-control.right {
+	background: none;
+	box-shadow: none;
+	opacity: 1.0;
+}
+
+.carousel-item {
+	margin-right: 47px;
+}
+
+#right-slider-control {
+	margin-left: 70px;
+}
+
+
+/************************ Mobile Nav ************************/
+
+.mobile-nav {
+	display: none;
+}
+
+/************************ Media Queries ************************/
+
+/*centering resquest login detail button on small screens*/
+@media (max-width: 420px) {
+	.login-recovery a {
+		margin-left: 0px;
+	}
+}
+
+/*Footer text padding adjusment*/
+@media (max-width: 768px) {
+	.footer-last-p {
+		padding-bottom: 0px;
+	}
+	address {
+		margin-bottom: 15px;
+	}
+}
+
+@media (min-width: 1195px) and (max-width: 1250px) {
+	
+	#logo {
+		margin-left: 45px;
+	}
+	.desktop-nav > ul {
+		margin-left: 80px;
+	}
+	.desktop-nav > ul > li {
+		margin: -15px 9px 0px 0px;
+	}
+}
+
+@media (max-width: 1194px) {
+	.desktop-nav {
+		display: none;
+	}
+
+	#nav-toggle {
+		display: block;
+		height: 75px;
+		width: 100%;
+		background: url(../img/menu-burger.png) no-repeat 98% center;
+	}
+	
+	.mobile-nav {
+		position: fixed;
+		z-index: 10;
+		top: 0;
+		bottom: 0;
+		width: 215px;
+		/*display: none;*/
+		/*height: 0;*/
+		background: #615E79;
+		/*transform: translate3d(-215px, 0, 0);
+		transition: transform 0.4s ease;*/
+	}
+	
+	/* Displays mobile nav on click*/
+	.active-nav .mobile-nav nav {
+		height: initial;
+		display: block;
+		transform: translate3d(0, 0, 0);
+	}
+
+	.mobile-nav nav ul {
+		list-style: none;
+		padding: 0;
+	}
+	.mobile-nav nav ul:first-child {
+		margin-top: 100px;
+	}
+	.mobile-nav nav ul li a {
+		text-decoration: none;
+		display: block;
+		text-align: center;
+		color: #fff;
+		padding: 14px;
+		border-bottom: 1px solid #55595c;
+
+	}
+	#first-side-nav-li a {
+		border-top: 1px solid #55595c;
+	}
+
+	.mobile-nav nav ul li a:hover {
+		color: #61C0C7;
+
+	}
+
+}
+
+@media (min-width: 1440px) {
+	.desktop-nav {
+		margin-left: 60px;
+	}
+	#left-slider-control {
+		margin-right: 1225px;
+	}
+	#right-slider-control {
+		margin-left: 85px;
+	}
+}
 
 
 
+/************************ Modal Styles ************************/
 
+/*.modal-container {
+	position: fixed;
+	background-color: #fff;
+	width: 70%
+	max-width:900px;
+	left: 50%;
+	
 
+	-webkit-transform:translate(-50%, -200%);
+	-ms-transform:translate(-50%, -200%);
+	transform:translate(-50%, -200%);
 
+	-webkit-transition: transform 200ms ease-out;
+	-ms-transition: transform 200ms ease-out;
 
+	
+}
 
-
-/************************ Clear Floats ************************/
-
-.clearfloat:after {
+.modal:before {
 	content: "";
-	display: table;
-	clear: both;
+	position: fixed;
+	display: none;
+	background-color: rgba(12, 34,44, 0.6);
+	top: 0;
+	left: 0
+	height: 100%;
+	width: 100%
 }
+
+.modal:target .modal-container {
+	display: block;
+}
+
+
+.modal:target .modal-container {
+	-webkit-transform:translate(-50%, 0);
+	-ms-transform:translate(-50%, 0);
+	transform:translate(-50%, 0);
+}*/
 
