--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@
 }
 
 @font-face {
-  font-family: 'Sf Ns';
-  src:  url('../fonts/sfns.ttf') format('truetype');
+	font-family: 'Bentham', serif;
   font-weight: normal;
 }
 
@@ -29,6 +28,7 @@
 body {
 	font-family: 'Avenir Next', Helvetica, Arial, sans-serif;
 	overflow-x: hidden;
+
 }
 
 .container,
@@ -50,7 +50,6 @@ header.home-header {
 }
 
 #logo {
-	margin-left: 60px;
 	padding-top: 3px;
 	padding-bottom: 8px;
 
@@ -69,15 +68,15 @@ list-style-type: none;
 
 }
 
-#contact-btn {
+.desktop-nav .contact-btn {
 	border-radius: 6px;
 	border: 2px solid #fff;
 	padding: 8px 15px;
 }
 
-#contact-btn:hover {
+.desktop-nav .contact-btn:hover {
 	background-color: #61C0C7;
-	color: #fff;
+	color: #fff !important;
 }
 
 .desktop-nav > ul {
@@ -116,7 +115,10 @@ list-style-type: none;
 
 .desktop-nav ul li a:hover {
 	color: #61C0C7;
-	
+}
+
+#nav-open {
+	display: none;
 }
 
 
@@ -212,13 +214,13 @@ list-style-type: none;
 		padding: 30px;
 		position: relative;
 		top: 47%;
-		-webkit-transform: translateY(-80%);
-		-ms-transform: translateY(-80%);
-		transform: translateY(-80%);
+		-webkit-transform: translateY(-60%);
+		-ms-transform: translateY(-60%);
+		transform: translateY(-60%);
 }
 
 .hero-content h1 {
-	font-weight: 700;
+	font-weight: 600;
 	font-size: 53px;
 	margin: 0px;
 }
@@ -235,28 +237,28 @@ list-style-type: none;
 	border-radius: 10px;
 	text-decoration: none;
 	color: #fff;
-	font-weight: 400;
+	font-weight: 600;
 	font-size: 25px;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.31);
-
 }
-
-
-
 
 
 
 
 /************************ 3 col area styles ************************/
 
+.three-column-sec-wrapper {
+	margin-top: 75px;
+}
+
 .three-column-sec {
 	border: 1px solid #ccc;
-	margin:40px 9px 30px; 
+	margin: 0px 9px; 
 }
 
 .three-column-sec h4 {
 	color: #615E79;
-	font-family: 'Sf Ns', Helvetica, Arial, sans-serif;
+	font-family: 'Bentham', serif;
 	margin: 51px 0px 0px 0px;
 }
 
@@ -279,7 +281,7 @@ list-style-type: none;
 	content:url(../img/rightarrow.png);
 	position: relative;
 	top: 3px;
-	left: 5px;
+	left: 7.5px;
 }
 
 
@@ -337,12 +339,20 @@ footer p, address {
 }
 
 .directors {
+	margin-bottom: 15px;
 	text-align: center;
-	width: 145%;
 }
 
-figcaption h6 {
+.directors figure {
+	margin: 0 0 15px 0;
+}
+
+.directors h6, .directors p {
 	font-size: 14px;
+}
+
+.directors p {
+	margin-bottom: 0;
 }
 
 .figure-sec .offset-md-3 {
@@ -483,7 +493,7 @@ figcaption h6 {
 }
 
 form {
-	max-width: 390px;
+	/*max-width: 390px;*/
 	width: 90%;
 	margin: auto;
 
@@ -531,7 +541,8 @@ form a:hover {
 }
 
 .login-button {
-	padding: 5px 111px;
+	padding: 5px 50px;
+	max-width: 100%;
 	color: #fff;
 	font-size: 28px;
 	font-weight: 500; 
@@ -554,14 +565,11 @@ form label,
 #submit-button,
 #forgot-password {
 	width: 100%;
-	max-width: 388px;
+	/*max-width: 388px;*/
 }
 
 /************************ Sub Form Styles ************************/
 
-.login-recovery {
-	margin-left: 45px;
-}
 
 .login-recovery p {
 	margin-top: 30px;
@@ -603,7 +611,7 @@ form label,
 }
 
 .carousel-inner {
-	overflow: initial;
+    overflow: initial;
 }
 
 .carousel-control.left, .carousel-control.right {
@@ -616,9 +624,6 @@ form label,
 	margin-right: 47px;
 }
 
-#right-slider-control {
-	margin-left: 70px;
-}
 
 
 /************************ Mobile Nav ************************/
@@ -636,13 +641,59 @@ form label,
 	}
 }
 
-/*Footer text padding adjusment*/
+@media (max-width: 600px) {
+	.hero-content {
+		padding: 0;
+	}
+
+	.hero-content h1 {
+		font-size: 34px;
+	}
+
+	.hero-content h2 {
+		font-size: 20px;
+	}
+
+	.carousel-item {
+		margin-right: 0;
+		text-align: center;
+	}
+
+	.hero-content a {
+		font-size: 16px;
+	}
+}
+
 @media (max-width: 768px) {
 	.footer-last-p {
 		padding-bottom: 0px;
 	}
 	address {
 		margin-bottom: 15px;
+	}
+
+	.hero-content {
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+	}
+}
+
+@media (max-width: 992px) {
+	.three-column-sec {
+		margin-bottom: 30px;
+	}
+}
+
+@media (min-width: 992px) {
+	a.right.carousel-control {
+		right: -75px;
+	}
+}
+
+@media (min-width: 600px) and (max-width: 992px) {
+	.carousel-inner {
+    padding: 0 50px;
 	}
 }
 
@@ -664,36 +715,28 @@ form label,
 		display: none;
 	}
 
-	#nav-toggle {
+	#nav-close, #nav-open {
 		display: block;
-		height: 75px;
-		width: 100%;
-		background: url(../img/menu-burger.png) no-repeat 98% center;
+		float: right;
+		margin-top: 15px;
+		z-index: 100;
 	}
 	
 	.mobile-nav {
 		position: fixed;
+		display: none;
 		z-index: 10;
 		top: 0;
-		bottom: 0;
-		width: 215px;
-		/*display: none;*/
-		/*height: 0;*/
+		right: 0;
+		left: 0;
 		background: #615E79;
-		/*transform: translate3d(-215px, 0, 0);
-		transition: transform 0.4s ease;*/
 	}
 	
 	/* Displays mobile nav on click*/
-	.active-nav .mobile-nav nav {
-		height: initial;
-		display: block;
-		transform: translate3d(0, 0, 0);
-	}
-
 	.mobile-nav nav ul {
 		list-style: none;
 		padding: 0;
+		margin-bottom: 0;
 	}
 	.mobile-nav nav ul:first-child {
 		margin-top: 100px;
@@ -734,22 +777,27 @@ form label,
 
 /************************ Modal Styles ************************/
 
-/*.modal-container {
+.modal {
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-container {
 	position: fixed;
 	background-color: #fff;
-	width: 70%
-	max-width:900px;
+	width: 70%;
+	height: 600px;
+	overflow-y: scroll;
+	max-width: 700px;
 	left: 50%;
-	
+	top: 50%;
+	padding: 50px 50px 25px 50px;
 
-	-webkit-transform:translate(-50%, -200%);
-	-ms-transform:translate(-50%, -200%);
-	transform:translate(-50%, -200%);
+	-webkit-transform:translate(-50%, -50%);
+	-ms-transform:translate(-50%, -50%);
+	transform:translate(-50%, -50%);
 
 	-webkit-transition: transform 200ms ease-out;
 	-ms-transition: transform 200ms ease-out;
-
-	
 }
 
 .modal:before {
@@ -758,9 +806,9 @@ form label,
 	display: none;
 	background-color: rgba(12, 34,44, 0.6);
 	top: 0;
-	left: 0
+	left: 0;
 	height: 100%;
-	width: 100%
+	width: 100%;
 }
 
 .modal:target .modal-container {
@@ -772,5 +820,36 @@ form label,
 	-webkit-transform:translate(-50%, 0);
 	-ms-transform:translate(-50%, 0);
 	transform:translate(-50%, 0);
-}*/
+}
 
+.modal h1 {
+	color: #615E79;
+	font-size: 36px;
+	margin-top: 0;
+}
+
+.modal form {
+	width: 100%;
+}
+
+.modal label {
+	margin-top: 25px;
+}
+
+.modal textarea {
+	width: 100%;
+}
+
+.modal #submit-button {
+	padding-top: 30px;
+}
+
+.modal .login-button {
+	font-size: 20px;
+}
+
+a#modal-close-btn {
+    position: absolute;
+    right: 20px;
+    top: 15px;
+}
